// file: proto/gcommon/v1/metrics/v1/delete_provider_request.proto
// version: 1.0.0
// guid: c3d4e5f6-a7b8-9012-3456-789abcdef012

edition = "2023";

package gcommon.v1.metrics;


import "google/protobuf/go_features.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/metrics";

message DeleteProviderRequest {
  // Standard request metadata (tracing, auth, etc.)
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Provider ID to delete
  string provider_id = 2;

  // Optional force deletion (ignore dependencies)
  bool force = 3;

  // Dry run mode - just check what would be deleted
  bool dry_run = 4;
}
